--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CrimeActivity"
+        <activity
+            android:name=".CrimePagerActivity"
             android:label="@string/app_name">
 
         </activity>
